<resources>
    <string name="app_name">LIVECHAT</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="create_new_account">Create a new account</string>
    <string name="log_in_textView">Login into your account</string>
    <string name="register_button">register</string>
    <string name="login_button">login</string>
    <string name="application_name">Chat App</string>
    <string name="logout_menu">Logout</string>
    <string name="message_send_hint">Type a message...</string>
    <string name="profile">Profile</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset_text">By clicking RESET, you will receive an email to reset your password</string>
</resources>