<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="15dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_name"
        android:textColor="#fff"
        android:layout_marginBottom="150dp"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:text="@string/login_button"
        android:textColor="#fff"
        android:background="@color/colorPrimaryDark"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:textColor="#fff"
        android:text="@string/register_button"
        />

</LinearLayout>